<resources>
  <string name="app_name">nTasks</string>
  <!--Fab Menu Action items Strings-->
  <string name="action_note">Note</string>
  <string name="action_todo">ToDoList</string>
  <string name="action_mic">AudioNote</string>
  <string name="str_settings_title">Settings</string>
  <!--General Strings -->
  <string name="firebase_signed_in">Signed In</string>
  <string name="firebase_signed_out">Signed Out</string>
  <string name="open_drawer">open</string>
  <string name="close_drawer">close</string>
  <string name="drawer_calender_view">Calender View</string>
  <string name="drawer_report_view">Report View</string>
  <string name="notification_channel_name">nTasks</string>
  <string name="notification_channel_desc">the main channel to provide tasks notification</string>
  <string name="notification_media_name">Media Notification</string>
  <string name="notification_media_desc">the channel that provide media style notification</string>
  <string name="str_empty_tasks">You\'re done for today</string>
  <string name="widget_empty_string">You\'re done for today, Enjoy</string>
  <string name="str_empty_tasks_two">Enjoy the rest</string>
  <string name="title_hint">Title</string>
  <string name="body_hint">Description</string>
  <string name="task_priority">Task Priority</string>
  <string name="content_desc_mic">Speech To Text mic icon</string>
  <string name="content_desc_empty_calender">Empty Calender image</string>
  <string name="content_desc_cup">Coffee cup drawable</string>
  <string name="content_desc_normal_note">Normal Note</string>
  <string name="content_desc_todo_note">Todo list Note</string>
  <string name="content_desc_audio_note">Audio Note</string>
  <string name="permissions_required">App requires RECORD_AUDIO permission to access mic and
    WRITE_EXTERNAL_STORAGE to save recorded audio
  </string>
  <string name="deny_permissions_message">Permissions are required to allow App recording and save your notes.</string>
  <string name="permissions_alert_title">Permissions Required</string>
  <string name="content_playback_btn">Play Back Button</string>
  <string name="label_due_date">Due Date</string>
  <string name="label_date_not_set">Not Set</string>
  <string name="reminder_title">Task Reminder</string>
  <string name="reminder_normaltask">Normal Task</string>
  <string name="reminder_todolist">TODO List</string>
  <string name="reminder_audionote">Audio Note</string>
  <string name="notify_action_complete">Done</string>
  <string name="todo_list_button">Add New Item</string>
  <string name="cannot_save_empty">Task Cannot Be Empty</string>
  <string name="play">Play</string>
  <string name="pause">Pause</string>
  <string name="rep_weekly">Weekly Tasks</string>
  <string name="rep_active">Active Days</string>
  <string name="cannot_find_audio_file">Cannot find this audio file</string>
  <string name="task_item_content">Repeatable Task Image View</string>
  <string name="task_item_delete_button">Task Delete Button</string>
  <!--This string CurrentUser will help when background job runs to backup data under user root-->
  <string name="current_user_firebase">current_user</string>
  <string name="current_user_display_name">user_display_name</string>
  <string name="title_transition_name">shared_element_trans</string>
  <!--Detail Menu Items-->
  <string name="str_action_detail_delete">Delete</string>
  <string name="str_action_detail_reminder">Set Reminder</string>
  <string name="str_action_detail_done">Done</string>
  <string name="str_action_signout">Sign out</string>
  <!--Task Operations Messages-->
  <string name="msg_task_updated">Task updated successfully</string>
  <string name="msg_task_deleted">Task deleted successfully</string>
  <string name="msg_task_added">Task added successfully</string>
  <!--Audio Notes Strings-->
  <string name="audio_counter_format">%02d:%02d</string>
  <string name="appwidget_text">EXAMPLE</string>
  <string name="add_widget">Add widget</string>
  <!--App Settings-->
  <!--Tasks sortBy -->
  <string name="settings_label">Settings</string>
  <string name="settings_sortby_label">Tasks Sort</string>
  <string name="settings_sortby_key" translatable="false">tasks_sortby</string>
  <string name="settings_sortby_default" translatable="false">@string/settings_date_value</string>

  <string name="settings_priority_label">Priority First</string>
  <string name="settings_priority_value" translatable="false">priority_first</string>
  <string name="settings_date_label">Date First</string>
  <string name="settings_date_value" translatable="false">date_first</string>

  <!--Completed Tasks Display-->
  <string name="settings_completed_title">Display Completed Tasks</string>
  <string name="settings_completed_key">completed_tasks</string>
  <string name="settings_completed_show">Show</string>
  <string name="settings_completed_hide">Hide</string>

  <!--High Quality Recording-->
  <string name="settings_recording_title">Audio Recoding Quality</string>
  <string name="settings_recording_key">recording_quality</string>
  <string name="settings_recording_high">High Quality</string>
  <string name="settings_recording_low">Low Quality</string>

  <!--Cloud Sync-->
  <string name="settings_cat_sync_label">Cloud Backup</string>
  <string name="settings_cat_sync_key" translatable="false">cloud_sync</string>
  <string name="settings_sync_title">Allow Daily Cloud Backup</string>
  <string name="settings_sync_key" translatable="false">sync_daily</string>
  <string name="settings_sync_enabled">Enabled</string>
  <string name="settings_sync_disabled">Disabled</string>

  <string name="backup_schedule" translatable="false">backup_scheduled</string>

  <string name="settings_sync_time_label">Backup Time</string>
  <string name="settings_sync_time_key" translatable="false">backup_time</string>
  <string name="settings_sync_time_default">@string/settings_sync_day_key</string>

  <string name="settings_sync_twelve_label">Every 12 hours</string>
  <string name="settings_sync_twelve_key" translatable="false">twelve_time</string>

  <string name="settings_sync_day_label">Every Day</string>
  <string name="settings_sync_day_key" translatable="false">day_time</string>

  <string name="settings_sync_week_label">Every Week</string>
  <string name="settings_sync_week_key" translatable="false">week_time</string>
  <!--AlertDialog Strings-->
  <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
  <string name="discard">Discard</string>
  <string name="keep_editing">Keep Editing</string>
  <string name="delete_task">Delete Task ?</string>
  <string name="confirm">Confirm</string>
  <string name="cancel">Cancel</string>
  <!--First Time Guide Strings-->
  <string name="task_list_fab_title">Add New Task</string>
  <string name="task_list_fab_description">we have three different types of tasks tap on + to figure out</string>
  <string name="task_list_settings_title">Settings Button</string>
  <string name="task_list_settings_desc">customize your Tasks display and enable/disable cloud backup</string>
  <string name="task_list_overflow_title">Overflow Actions</string>
  <string name="task_list_overflow_desc">you can sign out with current user and use a different one to fetch user data from the server </string>
  <string name="task_list_app_title">Welcome to nTasks</string>
  <string name="task_list_app_desc">This app made for you, your feedback always matters our goal to provide smooth experience with clean UX without ads and always free!</string>
  <string name="sequence_finish_message">Enjoy managing your daily tasks!</string>
  <string name="str_is_first_run">first_run</string>
  <!--FirstRun Backup-->
  <string name="backup_message">Available Backup For This Account</string>
  <string name="backup_restore">Restore</string>
  <string name="backup_cancel">Cancel</string>
  <!--Repeated-->
  <string name="repeat_none">Off</string>
  <string name="repeat_daily">Day</string>
  <string name="repeat_weekly">Week</string>
  <string name="repeat_monthly">Month</string>
  <string name="repeat_yearly">Year</string>
  <!--Register Strings & Login-->
  <string name="str_register">Register</string>
  <string name="str_email_hint">Enter Your Email Address</string>
  <string name="str_password_hint">Password</string>
  <string name="str_repeat_password_hint">Repeat Password</string>
  <string name="str_button_go">GO</string>
  <string name="str_txt_login">Login</string>
  <string name="str_msg_invaild_email">Invalid email or empty password</string>
  <string name="str_msg_reset">Invalid email</string>
  <string name="str_msg_loading">Registering....</string>
  <string name="str_msg_false">Register failed</string>
  <string name="str_msg_email_exist">Email exist or weak password!</string>
  <string name="str_dialog_ok">ok</string>
  <string name="str_login_sucess">Register and Login success</string>
  <string name="str_login_process">Login....</string>
  <string name="str_login_failed">Login failed</string>
  <string name="str_login_email_wrong">Email not exist or wrong password!</string>
  <string name="str_reset_failed">Failed</string>
  <string name="str_reset_failed_message">Failed to sent email to</string>
  <string name="str_reset_okay">Password Recovery</string>
  <string name="str_reset_okay_message">Sent email to</string>
  <string name="str_username_hint">Email</string>
  <string name="txt_forget_password">forgot your password?</string>

  <!--App Shortcuts strings-->
  <string name="normal_task_id">shortcut_normal_task</string>
  <string name="normal_task_short_label">Normal Task</string>
  <string name="normal_task_long_label">tap to add normal task</string>
  <string name="shortcut_disable_message">new task shortcut</string>

  <string name="list_task_id">shortcut_list_task</string>
  <string name="list_task_short_label">TODO List Task</string>
  <string name="list_task_long_label">tap to add todo task</string>

  <string name="audio_task_id">shortcut_audio_task</string>
  <string name="audio_task_short_label">Audio Note Task</string>
  <string name="audio_task_long_label">tap to add audio task</string>

  <string name="calendar_shortcut_id">calendar_view</string>
  <string name="calendar_shortcut_short_label">Calendar View</string>
  <string name="calendar_shortcut_long_label">tap to launch calendar view</string>
  <string name="calendar_shortcut_dissable_message">Calendar View</string>

  <!--Add new task from Calendar Strings-->
  <string name="calendar_add_task">Add New Task</string>
  <string name="calendar_edit_hint">Enter your note</string>
  <string name="img_button_alarm">Time Picker Button</string>
  <string name="img_button_add">Add New Task Button</string>

  <!--Item TODOList image button content description-->
  <string name="list_alarm_button">add todo alarm button</string>
  <string name="list_delete_button">add todo delete button</string>


</resources>
