<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/action_detail_reminder"
        android:icon="@drawable/ic_alarm"
        android:orderInCategory="1"
        android:title="@string/str_action_detail_reminder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_detail_done"
        android:icon="@drawable/ic_done"
        android:orderInCategory="2"
        android:title="@string/str_action_detail_done"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/action_detail_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        android:title="@string/str_action_detail_delete"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true" />


</menu>