<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_sixteen_dp"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/task_todo_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:inputType="textAutoComplete|text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/task_todo_priority_switch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/dimen_eight_dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:text="@string/task_priority"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintLeft_toLeftOf="@id/task_todo_title"
        app:layout_constraintRight_toRightOf="@id/task_todo_title"
        app:layout_constraintTop_toBottomOf="@id/task_todo_title"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_sixteen_dp"
        android:layout_marginStart="@dimen/dimen_sixteen_dp"
        android:text="@string/label_due_date"
        app:layout_constraintLeft_toLeftOf="@id/task_todo_priority_switch"
        app:layout_constraintTop_toBottomOf="@id/task_todo_priority_switch" />

    <TextView
        android:id="@+id/task_todo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_sixteen_dp"
        android:layout_marginLeft="@dimen/dimen_sixteen_dp"
        android:layout_marginRight="@dimen/dimen_sixteen_dp"
        android:text="@string/label_date_not_set"
        app:layout_constraintRight_toRightOf="@id/task_todo_title"
        app:layout_constraintTop_toBottomOf="@id/task_todo_priority_switch" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/task_todo_title"
        app:layout_constraintRight_toRightOf="@id/task_todo_title"
        app:layout_constraintTop_toBottomOf="@id/task_todo_date">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/task_todo_item_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/todo_list_button"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/task_todo_recycle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_eight_dp"
        android:padding="@dimen/dimen_four_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/task_todo_title"
        app:layout_constraintRight_toRightOf="@id/task_todo_title"
        app:layout_constraintTop_toBottomOf="@id/input_layout" />


</android.support.constraint.ConstraintLayout>