<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="@dimen/dimen_eight_dp">

  <CheckBox
    android:id="@+id/task_todo_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/dimen_fortyeight"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <com.nloops.ntasks.views.TaskTitleView
    android:id="@+id/task_todo_textview"
    android:layout_width="0dp"
    android:layout_height="@dimen/dimen_fortyeight"
    android:ellipsize="end"
    android:fontFamily="@font/roboto_regular"
    android:gravity="center_vertical"
    android:hint="@string/body_hint"
    android:maxLines="1"
    android:textSize="@dimen/subtitle_text_size"
    app:layout_constraintLeft_toRightOf="@id/task_todo_checkbox"
    app:layout_constraintRight_toLeftOf="@id/task_todo_alarm"
    app:layout_constraintTop_toTopOf="@id/task_todo_checkbox"
    />

  <ImageButton
    android:id="@+id/task_todo_alarm"
    android:layout_width="@dimen/dimen_fortyeight"
    android:layout_height="@dimen/dimen_fortyeight"
    android:background="?android:selectableItemBackground"
    android:contentDescription="@string/list_alarm_button"
    android:src="@drawable/ic_alarm"
    app:layout_constraintRight_toLeftOf="@id/task_todo_delete"
    app:layout_constraintTop_toTopOf="@id/task_todo_checkbox"
    />

  <ImageButton
    android:id="@+id/task_todo_delete"
    android:layout_width="@dimen/dimen_fortyeight"
    android:layout_height="@dimen/dimen_fortyeight"
    android:background="?android:selectableItemBackground"
    android:contentDescription="@string/list_delete_button"
    android:src="@drawable/ic_delete"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@id/task_todo_checkbox"
    />

  <TextView
    android:id="@+id/task_todo_due_date"
    android:textStyle="italic"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toRightOf="@id/task_todo_checkbox"
    app:layout_constraintRight_toLeftOf="@id/task_todo_alarm"
    app:layout_constraintTop_toBottomOf="@id/task_todo_textview"
    tools:text="@string/body_hint"/>


</android.support.constraint.ConstraintLayout>