<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/calendar_new_task_cardview"
  style="@style/MyFragmentsCardViewStyle"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:cardBackgroundColor="@color/colorCardForeground"
  app:cardCornerRadius="@dimen/dimen_four_dp">

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_four_dp"
    >

    <TextView
      android:id="@+id/tv_calendar_tap_on"
      android:layout_width="match_parent"
      android:layout_height="@dimen/dimen_fifty_dp"
      android:layout_marginBottom="@dimen/dimen_sixteen_dp"
      android:padding="@dimen/dimen_four_dp"
      android:text="@string/calendar_add_task"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

    <android.support.design.widget.TextInputLayout
      android:id="@+id/ed_note_holder"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/calendar_edit_hint"
      app:layout_constraintLeft_toLeftOf="@id/tv_calendar_tap_on"
      app:layout_constraintTop_toBottomOf="@id/tv_calendar_tap_on"
      >
      <android.support.design.widget.TextInputEditText
        android:id="@+id/calendar_task_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textAutoComplete|text|textCapWords"
        android:textSize="@dimen/title_text_size"
        android:visibility="invisible"
        tools:visibility="visible"
        />
    </android.support.design.widget.TextInputLayout>

    <TextView
      android:id="@+id/tv_calendar_date_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_sixteen_dp"
      android:layout_marginBottom="@dimen/dimen_sixteen_dp"
      android:padding="@dimen/dimen_four_dp"
      android:fontFamily="@font/roboto_regular"
      android:textColor="@color/colorAccent"
      android:textSize="@dimen/item_task_date_size"
      app:layout_constraintLeft_toLeftOf="@id/tv_calendar_tap_on"
      app:layout_constraintTop_toBottomOf="@id/ed_note_holder"
      tools:text="Today"
      />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorCardBackgroundNew"
      android:orientation="horizontal"
      app:layout_constraintLeft_toLeftOf="@id/tv_calendar_date_view"
      app:layout_constraintTop_toBottomOf="@id/tv_calendar_date_view"
      >

      <ImageButton
        android:id="@+id/calendar_btn_date"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/img_button_alarm"
        android:src="@drawable/ic_alarm"
        />

      <ImageButton
        android:id="@+id/calendar_btn_save"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/img_button_add"
        android:src="@drawable/ic_done"
        />

    </LinearLayout>

  </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>